manifests/apps/03-files/04-bookstack/04-mariadb-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: linuxserver/mariadb:10.6.9
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /config
              name: mariadb
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb-pvc
