manifests/apps/03-files/04-bookstack/10-bookstack-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - name: bookstack
        image: lscr.io/linuxserver/bookstack
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /config
          name: bookstack-data
      volumes:
      - name: bookstack-data
        persistentVolumeClaim:
          claimName: bookstack-pvc
