manifests/apps/03-files/04-bookstack/05-mariadb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: bookstack
  labels:
    app: mariadb
spec:
  ports:
   - port: 3306
     targetPort: 3306
  selector:
    app: mariadb
