manifests/apps/03-files/04-bookstack/09-bookstack-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: bookstack-service
  namespace: bookstack
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: bookstack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
