manifests/apps/03-files/04-bookstack/11-bookstack-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bookstack-ingress
  namespace: bookstack
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 4G
spec:
  rules:
  - host: bookstack.codekernel.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack-service
            port:
              number: 80
  tls:
  - hosts:
    - bookstack.codekernel.co.uk
